trying fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -275,15 +275,15 @@ body {
 }
 @media only screen and (min-width: 1000px) {
   .home-page {
-    height: 80vh;
-    padding-bottom: 18vh;
+    height: 100vh;
+    padding-bottom: 10vh;
   }
   .profile__name {
     font-size: 1.75rem;
   }
   .about__header {
     font-size: 2.5rem;
-    line-height: 70px;
+    line-height: 50px;
   }
 }
 @media only screen and (min-width: 1400px) {
