--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -155,8 +155,8 @@
 @media only screen and (min-width: 1000px){
 
     .home-page{
-        height: 80vh;
-        padding-bottom: 18vh;
+        height: 100vh;
+        padding-bottom: 10vh;
     }
 
     .profile__name{
@@ -165,7 +165,7 @@
 
     .about__header{
         font-size:2.5rem;
-        line-height: 70px;
+        line-height: 50px;
     }
 
 }
